# MHSapi

./: LICENSE  README.md  pyproject.toml
src/MHSapi/: MHSapi.py  test_Client.py
tests/: test_Client.py
