[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MHSapi"
version = "0.0.1"
authors = [
  { name="Jakob Zeitler", email="jakob@matterhorn.studio" },
]
description = 'API Client for Matterhorn Studio'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'aiopenapi3',
  'pandas',
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"