[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MHSapi"
version = "0.0.2"
authors = [
  { name="Jakob Zeitler", email="jakob@matterhorn.studio" },
]
description = 'API Client for Matterhorn Studio'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pydantic==2.4.2',
  'aiopenapi3',
  'pandas',
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
